[gd_scene load_steps=33 format=3 uid="uid://cce1rkl4yiv8g"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_rluoc"]
[ext_resource type="Theme" uid="uid://b0dhfhdkknaj3" path="res://user_interface/chop_theme.tres" id="2_h2fyh"]
[ext_resource type="Texture2D" uid="uid://d4cpdtp6ng8ou" path="res://user_interface/main_menu/menu_beast.png" id="2_rwphk"]
[ext_resource type="Texture2D" uid="uid://clrb5gif84bdf" path="res://user_interface/main_menu/menu_butcher.png" id="3_pvcq2"]
[ext_resource type="Texture2D" uid="uid://8gy7beu6w5fj" path="res://user_interface/main_menu/menu_logo.png" id="4_m3cka"]
[ext_resource type="Texture2D" uid="uid://d2sfjwkrv1clw" path="res://vfx/rain_drop.png" id="6_dpn0x"]
[ext_resource type="FontFile" uid="uid://br1pfckp2nbrv" path="res://user_interface/fonts/shlop/shlop rg.otf" id="6_pb8gk"]
[ext_resource type="Texture2D" uid="uid://bilkanq4ivsho" path="res://vfx/rain_striking.png" id="7_03ygk"]
[ext_resource type="PackedScene" uid="uid://eh11t8si04ed" path="res://user_interface/splattering_rain.tscn" id="8_hdx4d"]
[ext_resource type="FontFile" uid="uid://jd0nv5p8s7t7" path="res://user_interface/fonts/baron-kuffner/Baron Kuffner.otf" id="8_rg3xj"]
[ext_resource type="FontFile" uid="uid://b8ei6fu0n0k4s" path="res://user_interface/fonts/Printvetica.otf" id="10_56qnp"]
[ext_resource type="PackedScene" uid="uid://c45dv8km6cdm" path="res://vfx/color_shift_layer.tscn" id="11_c7trd"]
[ext_resource type="Shader" path="res://addons/extensible_color_palette/color_filter.gdshader" id="12_wa7r1"]
[ext_resource type="PackedScene" uid="uid://dq04kjd45ls35" path="res://user_interface/settings.tscn" id="13_37shj"]
[ext_resource type="PackedScene" uid="uid://b7ge44ox6ndlf" path="res://user_interface/input_settings.tscn" id="14_byd8w"]
[ext_resource type="PackedScene" uid="uid://cgc2h3rt7dkb0" path="res://vfx/post_processing.tscn" id="15_ybayh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_84x4k"]
bg_color = Color(0.156863, 0.14902, 0.156863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eytvx"]
bg_color = Color(0.2, 0.143267, 0.126, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vfl18"]
bg_color = Color(0.101961, 0.0941176, 0.101961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cqy0"]
bg_color = Color(0.278431, 0.266667, 0.278431, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3qh5t"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sy1oe"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(400, 5, 1)
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 300.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
color = Color(1, 1, 1, 0.584314)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jmwst"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_qorv8"]
colors = PackedColorArray(1, 1, 1, 1, 0.231518, 0.231518, 0.231518, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ruwf1"]
gradient = SubResource("Gradient_qorv8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nq8je"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(8, 1, 1)
gravity = Vector3(0, 0, 0)
color = Color(1, 1, 1, 0.87451)
color_ramp = SubResource("GradientTexture1D_ruwf1")
anim_speed_min = 0.4
anim_speed_max = 0.4

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7gh33"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(30, 30, 1)
gravity = Vector3(0, 0, 0)
color = Color(1, 1, 1, 0.87451)
color_ramp = SubResource("GradientTexture1D_ruwf1")
anim_speed_min = 0.4
anim_speed_max = 0.4

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kr7tk"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 6, 1)
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 300.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
color = Color(1, 1, 1, 0.584314)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1r2yo"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 6, 1)
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 300.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
color = Color(1, 1, 1, 0.584314)

[sub_resource type="Gradient" id="Gradient_asxe6"]
offsets = PackedFloat32Array(0, 0.276398, 0.493789, 0.552795, 1)
colors = PackedColorArray(0.19053, 0.1682, 0.29, 0.556863, 0.55428, 0.5456, 0.62, 0.647059, 1, 0.427451, 0.2, 0.796078, 1, 0.775628, 0.619103, 0.634885, 1, 0.85098, 0.709804, 0.6)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_mhpyr"]
gradient = SubResource("Gradient_asxe6")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xrtja"]
shader = ExtResource("12_wa7r1")
shader_parameter/flip = null
shader_parameter/gradient = SubResource("GradientTexture1D_mhpyr")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rluoc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0156863, 0.0156863, 0.0156863, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_rwphk")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_pvcq2")

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -68.0
offset_top = -97.0
offset_right = 572.0
offset_bottom = 263.0
texture = ExtResource("4_m3cka")

[node name="Main" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="v" type="VBoxContainer" parent="Main"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 66.0
offset_top = 194.0
offset_right = 266.0
offset_bottom = 274.0

[node name="Button" type="Button" parent="Main/v"]
layout_mode = 2
theme = ExtResource("2_h2fyh")
theme_override_styles/normal = SubResource("StyleBoxFlat_84x4k")
theme_override_styles/hover = SubResource("StyleBoxFlat_eytvx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vfl18")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7cqy0")
text = "New Game"

[node name="HSeparator" type="HSeparator" parent="Main/v"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_3qh5t")

[node name="Button3" type="Button" parent="Main/v"]
layout_mode = 2
theme = ExtResource("2_h2fyh")
theme_override_styles/normal = SubResource("StyleBoxFlat_84x4k")
theme_override_styles/hover = SubResource("StyleBoxFlat_eytvx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vfl18")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7cqy0")
disabled = true
text = "Continue Game"

[node name="SettingsButton" type="Button" parent="Main/v"]
layout_mode = 2
theme = ExtResource("2_h2fyh")
theme_override_styles/normal = SubResource("StyleBoxFlat_84x4k")
theme_override_styles/hover = SubResource("StyleBoxFlat_eytvx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vfl18")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7cqy0")
text = "Settings"

[node name="Button2" type="Button" parent="Main/v"]
layout_mode = 2
theme = ExtResource("2_h2fyh")
theme_override_styles/normal = SubResource("StyleBoxFlat_84x4k")
theme_override_styles/hover = SubResource("StyleBoxFlat_eytvx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vfl18")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7cqy0")
text = "Quit Game"

[node name="Title" type="Control" parent="Main"]
anchors_preset = 0
offset_left = -188.0
offset_top = -110.0
offset_right = -148.0
offset_bottom = -70.0

[node name="Butcher" type="Label" parent="Main/Title"]
layout_mode = 0
offset_left = 275.0
offset_top = 154.0
offset_right = 460.0
offset_bottom = 227.0
theme_override_colors/font_color = Color(1, 0.258824, 0.258824, 1)
theme_override_fonts/font = ExtResource("6_pb8gk")
theme_override_font_sizes/font_size = 55
text = "Butcher"

[node name="And" type="Label" parent="Main/Title"]
layout_mode = 0
offset_left = 252.0
offset_top = 210.0
offset_right = 313.0
offset_bottom = 227.0
theme_override_colors/font_color = Color(0.607843, 0.670588, 0.698039, 1)
theme_override_fonts/font = ExtResource("10_56qnp")
theme_override_font_sizes/font_size = 14
text = "AND"
horizontal_alignment = 1

[node name="THE" type="Label" parent="Main/Title"]
layout_mode = 0
offset_left = 258.0
offset_top = 225.0
offset_right = 319.0
offset_bottom = 242.0
theme_override_colors/font_color = Color(0.607843, 0.670588, 0.698039, 1)
theme_override_fonts/font = ExtResource("10_56qnp")
theme_override_font_sizes/font_size = 14
text = "THE"
horizontal_alignment = 1

[node name="BEAST" type="Label" parent="Main/Title"]
layout_mode = 0
offset_left = 304.0
offset_top = 187.0
offset_right = 489.0
offset_bottom = 279.0
theme_override_colors/font_color = Color(0.980392, 0.980392, 0.980392, 1)
theme_override_fonts/font = ExtResource("8_rg3xj")
theme_override_font_sizes/font_size = 62
text = "BEAST"

[node name="rain" type="GPUParticles2D" parent="."]
position = Vector2(304, -26)
amount = 200
process_material = SubResource("ParticleProcessMaterial_sy1oe")
texture = ExtResource("6_dpn0x")
lifetime = 4.0

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_jmwst")
position = Vector2(449, 133)
amount = 1
process_material = SubResource("ParticleProcessMaterial_nq8je")
texture = ExtResource("7_03ygk")
lifetime = 0.2
randomness = 0.43

[node name="GPUParticles2D5" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_jmwst")
position = Vector2(300, 346)
amount = 1
process_material = SubResource("ParticleProcessMaterial_7gh33")
texture = ExtResource("7_03ygk")
lifetime = 0.2

[node name="SplatteringRain" parent="." instance=ExtResource("8_hdx4d")]

[node name="GPUParticles2D6" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_jmwst")
position = Vector2(344, 49)
rotation = -0.5044
amount = 1
process_material = SubResource("ParticleProcessMaterial_7gh33")
texture = ExtResource("7_03ygk")
lifetime = 0.2

[node name="rain2" type="GPUParticles2D" parent="."]
position = Vector2(280, 111)
amount = 12
process_material = SubResource("ParticleProcessMaterial_kr7tk")
texture = ExtResource("6_dpn0x")
lifetime = 4.0

[node name="rain3" type="GPUParticles2D" parent="."]
position = Vector2(508, 224)
amount = 12
process_material = SubResource("ParticleProcessMaterial_1r2yo")
texture = ExtResource("6_dpn0x")
lifetime = 4.0

[node name="ColorShiftLayer" parent="." instance=ExtResource("11_c7trd")]

[node name="Sprite2D" parent="ColorShiftLayer" index="0"]
material = SubResource("ShaderMaterial_xrtja")

[node name="Settings" parent="." instance=ExtResource("13_37shj")]
layout_mode = 1
offset_left = -257.0
offset_top = -93.0
offset_right = 43.0
offset_bottom = 207.0

[node name="InputSettings" parent="." instance=ExtResource("14_byd8w")]
layout_mode = 1

[node name="PostProcessing" parent="." instance=ExtResource("15_ybayh")]

[editable path="ColorShiftLayer"]
